name:               bash-parse
version:            0.1.0
category:           Language
license:            BSD3
license-file:       LICENSE
author:             Kyle Raftogianis
maintainer:         Kyle Raftogianis <kylerafto@gmail.com>
copyright:          Copyright (c) 2013 Kyle Raftogianis
build-type:         Simple
cabal-version:      >= 1.8
homepage:           http://github.com/knrafto/bash-parse/
bug-reports:        http://github.com/knrafto/bash-parse/issues
synopsis:           Fully parse Bash shell scripts
description:
    Parsec parsers to handle Bash's complicated syntax.

extra-source-files:
  .gitignore
  README.md

source-repository head
  type: git
  location: git://github.com/knrafto/bash-parse.git

library
  hs-source-dirs: src

  exposed-modules:
    Bash.Parse
    Bash.Parse.Builder
    Bash.Types

  other-modules:
    Bash.Parse.Internal
    Bash.Parse.Packrat

  build-depends:
    base,
    parsec,
    transformers

  ghc-options: -Wall -O2
