name:               language-bash
version:            0.9.0
category:           Language
license:            BSD3
license-file:       LICENSE
author:             Kyle Raftogianis
maintainer:         Kyle Raftogianis <knrafto@gmail.com>
copyright:          Copyright (c) 2013-2018 Kyle Raftogianis
build-type:         Simple
cabal-version:      >= 1.8
homepage:           http://github.com/knrafto/language-bash/
bug-reports:        http://github.com/knrafto/language-bash/issues
tested-with:        GHC == 7.10.1, GHC == 7.10.2, GHC == 8.0.2, GHC == 8.4.3
synopsis:           Parsing and pretty-printing Bash shell scripts
description:
    A library for parsing, pretty-printing, and manipulating
    Bash shell scripts.

extra-source-files:
  .gitignore
  README.md

source-repository head
  type: git
  location: git://github.com/knrafto/language-bash.git

library
  hs-source-dirs: src

  exposed-modules:
    Language.Bash.Cond
    Language.Bash.Expand
    Language.Bash.Parse
    Language.Bash.Parse.Word
    Language.Bash.Pretty
    Language.Bash.Syntax
    Language.Bash.Word

  other-modules:
    Language.Bash.Operator
    Language.Bash.Parse.Builder
    Language.Bash.Parse.Internal

  build-depends:
    base          >= 4.6 && < 5,
    parsec        >= 3.0 && < 4.0,
    prettyprinter >= 1.2 && < 2.0,
    transformers  >= 0.2 && < 0.6

  ghc-options: -Wall

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Tests.hs

  build-depends:
    base,
    directory,
    filepath,
    language-bash,
    parsec,
    process,
    QuickCheck,
    tasty,
    tasty-golden,
    tasty-quickcheck,
    tasty-hunit,
    tasty-expected-failure
